--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
         // Показываем видео
         cashbackDiv.innerHTML = `
-            <video id="cashback-video" width="350px" autoplay>
+            <video id="cashback-video" width="300px" autoplay>
                 <source src="images/gig.mp4" type="video/mp4">
                 Ваш браузер не поддерживает видео.
             </video>
@@ -553,7 +553,7 @@
                 const cashbackImage = eligibleImages[randomIndex];
 
                 // Заменяем видео на изображение
-                cashbackDiv.innerHTML = `<img src="${cashbackImage.src}" max-width: 380px; ">`;
+                cashbackDiv.innerHTML = `<img src="${cashbackImage.src}" width: 300px; ">`;
             } else {
                 // Если нет подходящих изображений
                 cashbackDiv.innerHTML = `<p>У вас недостаточно очков для получения кэшбэка.</p>`;
