--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <img src="images/train.jpg" alt="train" style="display: block; max-width: 100%; height: auto;">
 
             
-                <p сlass="line">Совсем скоро откроется трансферное окно, в котором «Локомотив» попробует усилиться, чтобы продолжить гонку за медалями и отыграть 4 очка отрыва.</p> 
+                <p сlass="line">Совсем скоро откроется трансферное окно, в котором «Локомотив» попробует усилиться, чтобы продолжить гонку за медалями и отыграть 4 очка отрыва.</p><br>
                 <p сlass="line"> Но сейчас ошибаться в выборе игрока нельзя, как это бывало раньше.</p>
                 <p сlass="line">Кроме того, нет денег на покупку нового сильного игрока...</p>
             <button onclick="goToIntro()">Далее</button>
@@ -181,9 +181,9 @@
     <div id="intro-screen" class="screen">
         <div class="screen-content">
                 <img src="images/coin.png" alt="coin" style="display: block; max-width: 100%; height: auto;">
-                <p сlass="line">RGR дает возможность получить кешбэк за провальные трансферы последних 20 лет.</p> 
+                <p сlass="line">RGR дает возможность получить кешбэк за провальные трансферы последних 20 лет.</p> <br>
                 <p сlass="line">При правильных ответах на вопросы сумма их трансфера вернется, и в финале ты сможешь выбрать хорошего игрока для усиления.</p>
-                <p сlass="line">Со всеми кандидатами на трансфер имеется предварительная договоренность.</p> 
+                <p сlass="line">Со всеми кандидатами на трансфер имеется предварительная договоренность.</p> <br>
                 <p сlass="line">Все зависит от тебя!</p>
                 <p сlass="line">Удачи! </p>
         <button onclick="startQuiz()">Начнем!</button>
@@ -289,8 +289,8 @@
                 text2_2: "Единственное приятное воспоминание об игре Давида в составе Локо - его прямой гол с углового в домашнем матче с Тереком в 2009 году."
             },
             {
-                image1: "image3.jpg",
-                text1: "Бай Джиби Фалл приехал в Локо, в надежде стать основным игроком атаки. Сенегалец не смог адаптироваться в России и был отправлен в аренду, в которой он умудрился стать лучшим бомбардиром.",
+                image1: "images/fall1.jpg",
+                text1: "Бай Джиби Фалл приехал в Локо, c надеждой стать основным игроком атаки. Сенегалец не смог адаптироваться в России и был отправлен в аренду, в которой он умудрился стать лучшим бомбардиром.",
                 question: "В чемпионат какой страны был отправлен Джиби Фалл?",
                 options: ["Дания", "Швеция", "Финляндия", "Норвегия"],
                 correct: 3,
@@ -337,30 +337,30 @@
                 text2_2: "Но не смотря на это заиграть на должном уровне после того ужасного ляпа так и не смог, поэтому разорвал контракт и уехал на свою малую родину - Анапу. И на профессиональном уровне больше никогда не играл."
             },
             {
-                image1: "image3.jpg",
-                text1: "Иван Левенец вошел в историю Локомотива своим ляпом в матче за Суперкубок 2008 года, а также зярядом фанатов 'Левенец иди в атаку'!",
-                text1_1: "Но за год до этого в составе Амкара, Иван стал единственным игроком в составе, который сделал это.",
-                question: "Каким рекордом обладает Иван Левенец в составе Амкара 2007 года?",
-                options: ["Отбил все пенальти", "Сыграл все матчи", "Пропустил в каждом матче", "Отдал 5 голевых передач"],
-                correct: 1,
-                points: 3,
+                image1: "images/zaki1.jpg",
+                text1: "Египетский Бульдозер Амр Заки приехал в Россию  и сразу же звявил, что готов забить 28 голов в деютном сезоне.",
+                text1_1: "Но за все время в Локомотиве его ждали только 2 матча в первенстве дублеров.",
+                question: "Сколько времени Амр Заки был игроком Локомотива?",
+                options: ["Один день", "Восемь дней", "Один месяц", "Восемь месяцев"],
+                correct: 3,
+                points: 2,
                 explanation: " ",
-                image2: "images/djibi2.jpg",
-                text2: "В сезоне 2007 года Иван был единственный игрок, который отыграл все матчи сезона в стартовом составе.",
-                text2_2: "Но не смотря на это заиграть на должном уровне после того ужасного ляпа так и не смог, поэтому разорвал контракт и уехал на свою малую родину - Анапу."
+                image2: "images/zaki2.jpg",
+                text2: "В январе 2006 г. наследник фараона подписал контракт, а уже в августе он возращался на родину подписав контракт с Замалеком.",
+               
             },
             {
-                image1: "image3.jpg",
-                text1: "Иван Левенец вошел в историю Локомотива своим ляпом в матче за Суперкубок 2008 года, а также зярядом фанатов 'Левенец иди в атаку'!",
-                text1_1: "Но за год до этого в составе Амкара, Иван стал единственным игроком в составе, который сделал это.",
-                question: "Каким рекордом обладает Иван Левенец в составе Амкара 2007 года?",
-                options: ["Отбил все пенальти", "Сыграл все матчи", "Пропустил в каждом матче", "Отдал 5 голевых передач"],
-                correct: 1,
+                image1: "images/mbark1.jpg",
+                text1: "Некоторые трансферы иногда действительно золотые.",
+                text1_1: "Когда за огромную трансферную стоимость, совершается минимум результативных действй",
+                question: "Кто является самым дорогим трансфером Локомотива?",
+                options: ["Смолов", "Крыховяк", "Буссуфа", "Оденвингие"],
+                correct: 2,
                 points: 15,
                 explanation: " ",
-                image2: "images/djibi2.jpg",
-                text2: "В сезоне 2007 года Иван был единственный игрок, который отыграл все матчи сезона в стартовом составе.",
-                text2_2: "Но не смотря на это заиграть на должном уровне после того ужасного ляпа так и не смог, поэтому разорвал контракт и уехал на свою малую родину - Анапу."
+                image2: "images/mbark2.jpg",
+                text2: "За переход Буссуфы Локомотив отдал 15 млн. евро, что до сих пор является рекордом",
+                text2_2: "За 3 года в Локомотиве марроканец забил 3 гола, тем самым каждый его гол стоил по 5 млн. евро."
             }
 
 
@@ -553,7 +553,7 @@
                 const cashbackImage = eligibleImages[randomIndex];
 
                 // Заменяем видео на изображение
-                cashbackDiv.innerHTML = `<img src="${cashbackImage.src}" width: 300px; ">`;
+                cashbackDiv.innerHTML = `<img src="${cashbackImage.src}" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">`;
             } else {
                 // Если нет подходящих изображений
                 cashbackDiv.innerHTML = `<p>У вас недостаточно очков для получения кэшбэка.</p>`;
