--- a/index.html
+++ b/index.html
@@ -367,7 +367,20 @@
                 image2: "images/mbark2.jpg",
                 text2: "За переход Буссуфы Локомотив отдал 15 млн. евро, что до сих пор является рекордом",
                 text2_2: "За 3 года в Локомотиве марроканец забил 3 гола, тем самым каждый его гол стоил по 5 млн. евро."
-            }
+            },
+            {
+                image1: "images/xen1.jpg",
+                text1: "Сразу же после продажи этого игрока, бывший клуб заявил, что данный игрок не подходит ДАЖЕ для них.",
+                question: "Какой игрок не подходил для команды Залатко Захаровича, но перешел в Локо?",
+                options: ["Игнатьев", "Хенти", "Фарфан", "Ньясс"],
+                correct: 1,
+                points: 5,
+                explanation: " ",
+                image2: "images/xen2.jpg",
+                text2: "Переход Хенти шокировал в первую очередь руководство Марибора, в котором он играл, потому что железнодорожники готовы были его купить",
+                text2_2: "Он забил всего 1 гол с пенальти в Локо и через 2 года Хенти был продан в 10 раз меньше"
+            },
+
 
 
 
