--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             { src: "images/zina25.jpg", price: 3 },
             { src: "images/gonsales28.jpg", price: 3 },
             { src: "images/langovich3.jpg", price: 3 },
-            { src: "images/pyanich25.jpg", price: 3 }
+            { src: "images/pyanich25.jpg", price: 3 },
             { src: "images/shetinin28.jpg", price: 3 },
             { src: "images/vaxani3.jpg", price: 3 },
             { src: "images/gerdji25.jpg", price: 3 },
